Deploy React build to gh-pages

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -110,7 +110,7 @@
     "description": [
       "Le portfolio sur lequel vous naviguez actuellement."
     ],
-    "githubLink": "https://github.com/Yangui1982/portfolio",
+    "githubLink": "https://jgvicente.xyz",
     "projectLink": null,
     "skills": [
       {"logo": "reactLogo.png", "title": "React.JS"},
